@@ -7,6 +7,7 @@ Game:
  + Add healing visual effect in Paramedics mode and a few scripts
  + Show remaining ammo when using Birdy egg or RC Plane bomb
  + Add separate control for team chat (default: U)
+ + Add separate control for changing hedgehog tags (default: Home)
  * Fix time box being usable in Sudden Death with 0 health decrease
  * Fix chat input key being sometimes registered twice
 
